# ckanext-qdes-theme

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
ckanext/qdes_theme/: helpers.py  plugin.py
ckanext/qdes_theme/assets/: config.json  gulpfile.js  package.json
ckanext/qdes_theme/assets/assets/scss/: _variables.scss
ckanext/qdes_theme/assets/assets/scss/components/: _footer.scss  _global.scss  _homepage.scss  _spinner.scss  _tree.scss
ckanext/qdes_theme/assets/css/: style.css
ckanext/qdes_theme/fanstatic/: package-lock.json  scripts.js  webassets.yml
ckanext/qdes_theme/fanstatic/assets/scss/: _mixins.scss  _variables.scss  style.scss
ckanext/qdes_theme/fanstatic/assets/scss/components/: _accordion.scss  _form.scss  _global.scss  (+4 more)
ckanext/qdes_theme/fanstatic/css/: fancytree.css  style.css  style.css.map
ckanext/qdes_theme/i18n/en_AU/LC_MESSAGES/: ckanext-qdes_theme.mo  ckanext-qdes_theme.po
ckanext/qdes_theme/templates/: base.html  footer.html  header.html  page.html
ckanext/qdes_theme/templates/group/: index.html  read.html
ckanext/qdes_theme/templates/home/: index.html  layout1.html
ckanext/qdes_theme/templates/home/snippets/: dataset_list.html  promoted.html
ckanext/qdes_theme/templates/package/: search.html
ckanext/qdes_theme/templates/snippets/: add_dataset.html  facet_list.html  follow_button.html  package_item.html  qdes_follow_button.html  search_form.html  search_result_text.html
ckanext/qdes_theme/templates/user/: read_base.html
ckanext/qdes_theme/tests/: test_plugin.py
(+2 files in other folders)
