[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/qdes_theme/i18n/ckanext-qdes_theme.pot
width = 80

[init_catalog]
domain = ckanext-qdes_theme
input_file = ckanext/qdes_theme/i18n/ckanext-qdes_theme.pot
output_dir = ckanext/qdes_theme/i18n

[update_catalog]
domain = ckanext-qdes_theme
input_file = ckanext/qdes_theme/i18n/ckanext-qdes_theme.pot
output_dir = ckanext/qdes_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-qdes_theme
directory = ckanext/qdes_theme/i18n
statistics = true
